# LightNN

./: CMakeLists.txt  install.sh
examples/mnist/: .mnist.cpp.swp  .mnist.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  mnist  mnist.cpp  mnist.cpp.save
examples/mnist/data/mnist/: README  mnist_to_png.py
examples/mnist/models/test_model/: module_2  module_6
examples/mnist/models/test_model (copy)/: .module_4.swp  module_2  module_3  module_5  module_7
include/: README.txt  data.h  network.cpp  network.h  standard.h
include/classifiers/: SoftmaxClassifier.h  StandardClassifier.h  classifier.h
include/core/: BiasWeight.h  SharedWeight.h  neuron.cpp  neuron.h  weight.cpp  weight.h
include/data/: image.h
include/functions/: ReluFunction.h  SigmoidFunction.h  function.h
include/modules/: BiasModule.cpp  BiasModule.h  ConvolutionModule.cpp  ConvolutionModule.h  FeedforwardModule.cpp  FeedforwardModule.h  FunctionModule.cpp  FunctionModule.h  module.cpp  module.h
include/optimizers/: StandardOptimizer.h  optimizer.h
